--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "postinstall": "bower cache clean && bower install",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -13,7 +14,8 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0"
+    "node-sass-middleware": "0.11.0",
+    "bower": "~1.3.12"
   },
   "devDependencies": {
     "faker": "^4.1.0",
