--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bower": "~1.3.12",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "faker": "^4.1.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0",
-    "bower": "~1.3.12"
+    "node-sass-middleware": "0.11.0"
   },
   "devDependencies": {
-    "faker": "^4.1.0",
     "nodemon": "^1.18.9"
   }
 }
