--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "cypherpunk",
-  "version": "0.0.0",
-  "private": true,
+  "name": "cypherpunk-university",
+  "version": "1.0.0",
+  "description": "To start app, pm2 start ~/apps/cypherpunk-university/bin/www",
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
     "postinstall": "bower cache clean && bower install",
     "dev": "nodemon ./bin/www"
   },
-  "dependencies": {
-    "bower": "~1.3.12",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "hbs": "~4.0.1",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JWWeatherman/cypherpunk-university.git"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.9"
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JWWeatherman/cypherpunk-university/issues"
+  },
+  "homepage": "https://github.com/JWWeatherman/cypherpunk-university#readme",
+  "dependencies": {
+    "bower": "^1.8.14",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "hbs": "^4.2.0",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
+    "node-sass-middleware": "^1.0.1",
+    "nodemon": "^2.0.20"
   }
 }
